# VolumeProjectorPlugin

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
DVRTransferFunction/: CMakeLists.txt
DVRTransferFunction/res/: TransferFunctionResources.qrc
DVRTransferFunction/src/: ClusteringAction.cpp  ClusteringAction.h  ColorSourceModel.cpp  ColorSourceModel.h  ColoringAction.cpp  ColoringAction.h  DVRTransferFunction.cpp  DVRTransferFunction.h  DatasetsAction.cpp  DatasetsAction.h  DensityPlotAction.cpp  DensityPlotAction.h  ExportAction.cpp  ExportAction.h  GradientPickerAction.cpp  GradientPickerAction.h  InteractiveShape.cpp  InteractiveShape.h  MaterialColorPickerAction.cpp  MaterialColorPickerAction.h  MaterialSettings.cpp  MaterialSettings.h  MaterialTransitionsAction.cpp  MaterialTransitionsAction.h  MiscellaneousAction.cpp  MiscellaneousAction.h  NavigationAction.cpp  NavigationAction.h  PlotAction.cpp  PlotAction.h  PointAction.cpp  PointAction.h  PointPlotAction.cpp  PointPlotAction.h  PositionAction.cpp  PositionAction.h  RenderModeAction.cpp  RenderModeAction.h  ScalarAction.cpp  ScalarSourceAction.cpp  (+12 more)
DVRTransferFunction/src/old_classes/: DVRTransferFunction.cpp  DVRTransferFunction.h  DVRTransferFunction.json  DVRTransferFunctionWidget_old.cpp  DVRTransferFunctionWidget_old.h  MaterialPickerAction.cpp  MaterialPickerAction.h  TransferFunctionRenderer.cpp  TransferFunctionRenderer.h  TransferFunctionWidget.cpp  TransferFunctionWidget.h
DVRViewPlugin/: CMakeLists.txt
DVRViewPlugin/res/: ViewerResources.qrc
DVRViewPlugin/res/shaders/: 1DMip.frag  2DComposite.frag  AltNNMaterialTransition.frag  ColorComposite.frag  FullDataCompositeBlending.frag  FullDataMaterialBlending.frag  FullDataSampling.comp  MaterialTransition2D.frag  NNMaterialTransition.frag  NoTFcomposite.frag  SmoothNNMaterialTransition.frag  Surface.vert
DVRViewPlugin/src/: Bounds3D.cpp  DVRViewPlugin.cpp  DVRViewPlugin.h  DVRViewPlugin.json  DVRWidget.cpp  DVRWidget.h  FullParamsDataLogger.cpp  FullParamsDataLogger.h  GlobalSettingsAction.cpp  GlobalSettingsAction.h  SettingsAction.cpp  SettingsAction.h  TrackballCamera.cpp  VolumeRenderer.cpp  VolumeRenderer.h  VoxelBox.cpp  VoxelBox.h
DVRVolumeLoader/: CMakeLists.txt
DVRVolumeLoader/src/: DVRVolumeLoader.cpp  DVRVolumeLoader.h  DVRVolumeLoader.json
res/: ViewerResources.qrc
res/shaders/: NoTFcomposite.frag  Surface.vert  points.frag  volume.frag  volume.vert
shaders/: points.vert
src/: Bounds3D.h  DVRViewPlugin.cpp  DVRViewPlugin.h  DVRWidget.cpp  DVRWidget.h  GlobalSettingsAction.h  SettingsAction.cpp  SettingsAction.h  TrackballCamera.cpp  TrackballCamera.h  VolumeRenderer.cpp  VolumeRenderer.h  VoxelBox.cpp  VoxelBox.h
